fix hero img squish

--- a/css/components/hero.css
+++ b/css/components/hero.css
@@ -12,6 +12,7 @@
     border-radius: 50%;
     width: 6rem;
     height: 6rem;
+    object-fit: cover;
 }
 
 .hero__subtitle {
